--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Influance Gear</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
-    
+    <!-- header  -->
+    <nav>
+        <div class="nav-logo">
+            <h3>Influencer products</h3>
+        </div>
+        <div class="nav-ber"></div>
+    </nav>
 </body>
 </html>
