--- a/index.html
+++ b/index.html
@@ -6,14 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Influance Gear</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/f00cfea3a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- header  -->
+   <header>
     <nav>
         <div class="nav-logo">
             <h3>Influencer products</h3>
         </div>
-        <div class="nav-ber"></div>
+        <div class="nav-ber">
+            <ul>
+                <li>Home</li>
+                <li>Products</li>
+                <li>sign up</li>
+                <li>Log In</li>
+                <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                <li><i class="fa-solid fa-cart-shopping"></i></li>
+            </ul>
+        </div>
     </nav>
+
+    <!-- banner  -->
+    <section class="banner">
+        <div class="banner-left">
+            <h1>Start your Journey as 
+                Influencer</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+
+            <a href="">
+                <button class="banner-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </a>
+        </div>
+        <div class="banner-right">
+            <img src="./images/main-camera.png" alt="">
+            <div class="background-circle"></div>
+        </div>
+    </section>
+   </header>
 </body>
 </html>
