--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@
             <div class="background-circle"></div>
         </div>
     </section>
+    <!-- company logo  -->
+    <div class="company">
+        <div class="company-logo">
+            <img src="./logos/Alibaba.svg" alt="">
+        </div>
+        <div class="company-logo">
+            <img src="./logos/Amazon.svg" alt="">
+        </div>
+        <div class="company-logo">
+            <img src="./logos/Daraz.pk Logo.svg" alt="">
+        </div>
+        <div class="company-logo">
+            <img src="./logos/Ebay.svg" alt="">
+        </div>
+        <div class="company-logo">
+            <img src="./logos/Rakuten.svg" alt="">
+        </div>
+        <div class="company-logo">
+            <img src="./logos/Target.svg" alt="">
+        </div>
+        <div class="company-logo">
+            <img src="./logos/Walmart.svg" alt="">
+        </div>
+    </div>
    </header>
 </body>
 </html>
