company added responsive

--- a/index.html
+++ b/index.html
@@ -68,5 +68,16 @@
         </div>
     </div>
    </header>
+   <!-- main  -->
+   <main>
+        <!-- populer item -->
+        <section class="populer">
+
+        </section>
+   </main>
+   <!-- footer  -->
+   <footer>
+
+   </footer>
 </body>
 </html>
